--- a/yes.html
+++ b/yes.html
@@ -16,7 +16,7 @@
     </p>
      <div class="tenor-gif-embed" data-postid="10260794371885683002" data-share-method="host" data-aspect-ratio="1.20219" data-width="100%"><a href="https://tenor.com/view/dudu-bubu-cute-funny-lovely-gif-10260794371885683002">Dudu Bubu Sticker</a>from <a href="https://tenor.com/search/dudu-stickers">Dudu Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     <div class="btn">
-      <a href="https://m.me/yourusername">Continue</a>
+      <a href="https://m.me/symondavecanoza0">Continue</a>
       
     </div>
   </div>
